# moltui

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml  release.yml
archive/: README.md  kitty_viewer.py
data/crystal/: aspirin.cif  graphite.cif  graphite.extxyz
data/gaussian/: README.md  ch3_hf_sto3g.molden  h2o_sto3g.molden  o2_cc_pvtz_cart.molden  peroxide_tsopt.molden  water_ccpvdz_pure_hf_g03.molden
data/geom/: water.com
data/qc_inputs/: gamess.inp  gaussian.gjf  jaguar.in  molcas.inp  molpro.com  nwchem.nwi  orca.inp  qchem.in
data/trexio/: main.py  n2.h5
examples/: benzene.molden  benzene_molden.py  diels_alder_rpath.xyz
moltui/: app.py  elements.py  geometry_panel.py  image_renderer.py  isosurface.py  mo_panel.py  molden.py  parsers.py  visual_panel.py
scripts/: cclib_regression_baseline.json  cclib_regression_check.py  extract_and_check_inputs.py  extracted_inputs_baseline.json  regression_baseline.py
src/moltui/: app.py  gto.py  (+17 more)
tests/: structure_compare.py  test_animation.py  test_app_export.py  test_app_trexio_mo.py  test_cclib_mo.py  test_cclib_vib.py  test_cif_vs_ase.py  test_elements.py  test_fchk_iodata.py  test_fchk_parser.py  test_filetype.py  test_integration.py  test_isosurface.py  test_mo_panel.py  test_mo_unfocused_navigation.py  test_molden_parser.py  test_normal_mode_navigation.py  test_parsers.py  test_periodic_app.py  test_periodic_parsers.py  test_qc_input_parsers.py  test_renderer.py  test_table_half_page_navigation.py  test_visual_panel_focus.py  test_volumetric_periodic.py
(+21 files in other folders)
